<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_exit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.uuun.cbyapplication.activity.LoginExitActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/themeColor"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_center"
            android:textColor="@color/lTextColor"
            android:textSize="@dimen/textLargeSize"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_noname"
                android:background="@drawable/reward_confirm"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/lTextColor"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_login"
                android:background="@drawable/reward_confirm"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/lTextColor"
                android:layout_marginLeft="20dp"
                />
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normalTextColor"
        android:layout_marginTop="10dp"
        />
    <RelativeLayout
        android:id="@+id/my_finish_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_finish"
            android:textSize="@dimen/textNormalSize"
            android:textColor="@color/normalTextColor"
            android:layout_margin="10dp"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normalTextColor"
        />
    <LinearLayout
        android:id="@+id/my_loading_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_loading1"
            android:textSize="@dimen/textNormalSize"
            android:textColor="@color/normalTextColor"
            android:layout_margin="10dp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normalTextColor"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normalTextColor"
        android:layout_marginTop="15dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_reward_friends"
            android:textSize="@dimen/textNormalSize"
            android:textColor="@color/normalTextColor"
            android:layout_margin="10dp"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normalTextColor"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_about"
            android:textSize="@dimen/textNormalSize"
            android:textColor="@color/normalTextColor"
            android:layout_margin="10dp"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normalTextColor"
        />
    <RelativeLayout
        android:id="@+id/my_apply_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_apply"
            android:textSize="@dimen/textNormalSize"
            android:textColor="@color/normalTextColor"
            android:layout_margin="10dp"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normalTextColor"
        />
</LinearLayout>
