<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:background="@mipmap/integration_background"
        >

        <TextView
            android:id="@+id/integration_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0积分"
            android:textColor="@color/lTextColor"
            android:textSize="21sp"
            android:layout_centerInParent="true"

            />

    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/reward_shape"
            >

            <ImageView
                android:layout_width="6dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:src="@mipmap/blue_img" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_reward_get"
            android:textSize="16sp"
            android:textColor="#5F5E5E"
            android:gravity="center_vertical"
            android:layout_marginLeft="9dp"
            android:paddingTop="12dp"
            />
            </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:text="@string/account_integration_login"
                android:textSize="16sp"
                android:textColor="#5F5E5E"
                android:background="@drawable/reward_shape_null1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"

                />
            <TextView
                android:id="@+id/integration_login"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="10"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/lTextColor"
                android:background="@drawable/radius_bg2"
                android:layout_marginRight="3dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="16sp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:text="@string/account_integration_share"
                android:textSize="16sp"
                android:textColor="#5F5E5E"
                android:background="@drawable/reward_shape_null1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"

                />
            <TextView
                android:id="@+id/integration_share"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="10"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/lTextColor"
                android:background="@drawable/radius_bg2"
                android:layout_marginRight="3dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="16sp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:text="已兑换"
                android:textSize="16sp"
                android:textColor="#5F5E5E"
                android:background="@drawable/reward_shape_null1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                />
            <TextView
                android:id="@+id/integration_get"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="10"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/lTextColor"
                android:background="@drawable/radius_bg2"
                android:layout_marginRight="3dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="16sp"
                />
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normalTextColor"
        android:layout_marginTop="25dp"
        />
    
    <RelativeLayout
        android:id="@+id/integration_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/iv1"
            android:layout_width="15dp"
            android:layout_height="16dp"
            android:src="@mipmap/integrate_gift"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="7dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_integration_change"
            android:textSize="16sp"
            android:textColor="#5F5E5E"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/iv1"
            />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="17dp"
            android:src="@mipmap/next"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:layout_marginRight="17dp"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normalTextColor"
        />

    <RelativeLayout
        android:id="@+id/integration_record_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/iv2"
            android:layout_width="16dp"
            android:layout_height="15dp"
            android:src="@mipmap/integrate_record"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="7dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_integration_record"
            android:textSize="16sp"
            android:textColor="#5F5E5E"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/iv2"
            />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="17dp"
            android:src="@mipmap/next"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:layout_marginRight="17dp"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normalTextColor"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/integration_address"
        >
        <ImageView
            android:id="@+id/iv3"
            android:layout_width="16dp"
            android:layout_height="15dp"
            android:src="@mipmap/integrate_address"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="7dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_integration_address"
            android:textSize="16sp"
            android:textColor="#5F5E5E"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/iv3"
            />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="17dp"
            android:src="@mipmap/next"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:layout_marginRight="17dp"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normalTextColor"
        />

    <RelativeLayout
        android:id="@+id/integration_express"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/iv4"
            android:layout_width="16dp"
            android:layout_height="15dp"
            android:src="@mipmap/integrate_express"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="7dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_integration_gift"
            android:textSize="16sp"
            android:textColor="#5F5E5E"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/iv4"
            />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="17dp"
            android:src="@mipmap/next"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:layout_marginRight="17dp"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normalTextColor"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

</LinearLayout>
</ScrollView>